--- a/public/__forms.html
+++ b/public/__forms.html
@@ -8,13 +8,9 @@
   <body>
     <!-- Form for Netlify -->
     <form name="contact" data-netlify="true" method="POST" hidden>
-      <input type="hidden" name="form-name" value="contact" />
-      <input type="text" name="name" required />
       <input type="email" name="email" required />
-      <input type="text" name="frenchLevel" />
-      <input type="tel" name="phone" />
-      <input type="text" name="objet" />
-      <input type="text" name="message" required />
+      <input type="text" name="subject" required/>
+      <textarea name="message" required></textarea>
       <button type="submit">Send Message</button>
     </form>
   </body>
