--- a/public/__forms.html
+++ b/public/__forms.html
@@ -9,13 +9,13 @@
 
 <body>
   <!-- Form for Netlify -->
-  <form name="contact" data-netlify="true" method="POST" hidden>
-    <input type="hidden" name="form-name" value="contact" />
-    <input type="email" name="email" required />
-    <input type="text" name="subject" required />
-    <textarea type="text" name="message" required> </textarea>
-    <button type="submit">Send Message</button>
-  </form>
+  <form name="contact" method="POST" data-netlify="true" hidden>
+  <input type="hidden" name="form-name" value="contact" />
+  <input type="email" name="email" />
+  <input type="text" name="subject" />
+  <textarea name="message"></textarea>
+</form>
+
 </body>
 
 </html>
